cr_parser_new_from_buf: assertion 'a_buf && a_len' failed
I see these log messages often when reviewing gnome-shell bug reports, also on my own system:
Sep 21 14:02:26 kab gnome-shell[3640]: cr_parser_new_from_buf: assertion 'a_buf && a_len' failed
Sep 21 14:02:26 kab gnome-shell[3640]: cr_declaration_parse_list_from_buf: assertion 'parser' failed
Sep 21 14:02:26 kab gnome-shell[3640]: cr_parser_new_from_buf: assertion 'a_buf && a_len' failed
Sep 21 14:02:26 kab gnome-shell[3640]: cr_declaration_parse_list_from_buf: assertion 'parser' failed